fvh boundary scanner customization (#580)
 fvh boundary scanner customization
