# grpc-gateway/luceneserver.swagger.json
@@ -1696,6 +1696,23 @@
         "custom_highlighter_params": {
           "type": "object",
           "description": "Optional Custom parameters for custom highlighters. If a field overriding is present, the global setting will be omitted for this field, and no merge will happen."
+        },
+        "boundary_scanner": {
+          "type": "string",
+          "description": "Define the boundary decision when creating fragments. Options are \"simple\" (default in fast vector highlighter), \"word\" or \"sentence\"."
+        },
+        "boundary_chars": {
+          "type": "string",
+          "description": "Terminating chars when using \"simple\" boundary_scanner. The default is \".,!? \\t\\n\"."
+        },
+        "boundary_max_scan": {
+          "type": "integer",
+          "format": "int64",
+          "description": "Number of chars to scan before finding the boundary_chars if using \"simple\" boundary scanner; If \"boundary_chars\" is not found after max scan, fragments will start/end at the original place. Default is 20."
+        },
+        "boundary_scanner_locale": {
+          "type": "string",
+          "description": "Locale used in boundary scanner when using \"word\" or \"sentence\" boundary_scanner. Examples: \"en-US\", \"ch-ZH\"."
         }
       }
     },
