# src/main/java/com/yelp/nrtsearch/server/luceneserver/highlights/HighlightSettings.java
@@ -16,6 +16,7 @@
 package com.yelp.nrtsearch.server.luceneserver.highlights;
 
 import java.util.Arrays;
+import java.util.Locale;
 import java.util.Map;
 import org.apache.lucene.search.Query;
 
@@ -33,6 +34,10 @@ public class HighlightSettings {
   private final String fragmenter;
   private final boolean discreteMultivalue;
   private final Map<String, Object> customHighlighterParams;
+  private final String boundaryScanner;
+  private final Character[] boundaryChars;
+  private final int boundaryMaxScan;
+  private final Locale boundaryScannerLocale;
 
   public HighlightSettings(
       Highlighter highlighter,
@@ -45,6 +50,10 @@ public class HighlightSettings {
       boolean scoreOrdered,
       String fragmenter,
       boolean discreteMultivalue,
+      String boundaryScanner,
+      Character[] boundaryChars,
+      int boundaryMaxScan,
+      Locale boundaryScannerLocale,
       Map<String, Object> customHighlighterParams) {
     this.highlighter = highlighter;
     this.preTags = preTags;
@@ -56,6 +65,10 @@ public class HighlightSettings {
     this.scoreOrdered = scoreOrdered;
     this.fragmenter = fragmenter;
     this.discreteMultivalue = discreteMultivalue;
+    this.boundaryScanner = boundaryScanner;
+    this.boundaryChars = boundaryChars;
+    this.boundaryMaxScan = boundaryMaxScan;
+    this.boundaryScannerLocale = boundaryScannerLocale;
     this.customHighlighterParams = customHighlighterParams;
   }
 
@@ -71,6 +84,10 @@ public class HighlightSettings {
         .withScoreOrdered(this.scoreOrdered)
         .withFragmenter(this.fragmenter)
         .withDiscreteMultivalue(this.discreteMultivalue)
+        .withBoundaryScanner(this.boundaryScanner)
+        .withBoundaryChars(this.boundaryChars)
+        .withBoundaryMaxScan(this.boundaryMaxScan)
+        .withBoundaryScannerLocale(this.boundaryScannerLocale)
         .withCustomHighlighterParams(this.customHighlighterParams);
   }
 
@@ -114,6 +131,22 @@ public class HighlightSettings {
     return discreteMultivalue;
   }
 
+  public String getBoundaryScanner() {
+    return boundaryScanner;
+  }
+
+  public Character[] getBoundaryChars() {
+    return boundaryChars;
+  }
+
+  public int getBoundaryMaxScan() {
+    return boundaryMaxScan;
+  }
+
+  public Locale getBoundaryScannerLocale() {
+    return boundaryScannerLocale;
+  }
+
   public Map<String, Object> getCustomHighlighterParams() {
     return customHighlighterParams;
   }
@@ -144,6 +177,15 @@ public class HighlightSettings {
         + discreteMultivalue
         + ", customHighlighterParams="
         + customHighlighterParams
+        + ", boundaryScanner='"
+        + boundaryScanner
+        + '\''
+        + ", boundaryChars="
+        + Arrays.toString(boundaryChars)
+        + ", boundaryCharsMaxScan="
+        + boundaryMaxScan
+        + ", boundaryScannerLocale="
+        + boundaryScannerLocale.toLanguageTag()
         + '}';
   }
 
@@ -159,6 +201,10 @@ public class HighlightSettings {
     private boolean scoreOrdered;
     private String fragmenter;
     private boolean discreteMultivalue;
+    private String boundaryScanner;
+    private Character[] boundaryChars;
+    private int boundaryMaxScan;
+    private Locale boundaryScannerLocale;
     private Map<String, Object> customHighlighterParams;
 
     public Builder() {}
@@ -213,6 +259,26 @@ public class HighlightSettings {
       return this;
     }
 
+    public Builder withBoundaryScanner(String boundaryScanner) {
+      this.boundaryScanner = boundaryScanner;
+      return this;
+    }
+
+    public Builder withBoundaryChars(Character[] boundaryChars) {
+      this.boundaryChars = boundaryChars;
+      return this;
+    }
+
+    public Builder withBoundaryMaxScan(int boundaryMaxScan) {
+      this.boundaryMaxScan = boundaryMaxScan;
+      return this;
+    }
+
+    public Builder withBoundaryScannerLocale(Locale boundaryScannerLocale) {
+      this.boundaryScannerLocale = boundaryScannerLocale;
+      return this;
+    }
+
     public Builder withCustomHighlighterParams(Map<String, Object> customHighlighterParams) {
       this.customHighlighterParams = customHighlighterParams;
       return this;
@@ -230,6 +296,10 @@ public class HighlightSettings {
           scoreOrdered,
           fragmenter,
           discreteMultivalue,
+          boundaryScanner,
+          boundaryChars,
+          boundaryMaxScan,
+          boundaryScannerLocale,
           customHighlighterParams);
     }
   }
